- Update rtl.css theme name. - Update template names consistently across templates. - Remove dead code from single.php, single-cat-fast.php, single-fast.php, single-job_listing.php, single-post.php, taxonomy-gc-sermon-series.php, taxonomy-gc-sermon-series-app-view.php, template-jobs.php, template-messages.php, template-messages-app-view.php, template-search-messages.php, template-series.php - Minor comments update to style.css

--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
 /*
 Theme Name: LIQUIDCHURCH
 Theme URI: http://www.liquidchurch.com/
-Author: EmizenTech Team
+Author: Liquid Church, EmizenTech Team
 Author URI: http://emizentech.com/
-Description:
-Version: 1.0
+Description: A custom WP theme.
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, right-sidebar,custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
 Text Domain: liquidchurch
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
 */
 .chk-box{
 vertical-align: middle;
