- Fixed outdated create_function with anonymous function in functions.php - Removed closing </div> that was causing <div class="page"> to terminate early in header.php - Significant work on recreating content-single-gc-sermons.php structure to better handle bootstrap theming and contain elements currently stretching full-width

--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -1,4 +1,6 @@
-/***** gc sermon search *****/
+/* Liquid Messages Related Theming */
+
+/* Search */
 .search-field {
     width: 60%;
     background: #e2e2e2;
