--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-	blue_btn  	=	for blue Button
-	orange_btn 	=	for orange Button
-					span inside blue btn class the content will be bigger
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -45,6 +39,7 @@ img {
     outline: none;
 }
 
+/* Clearfixes */
 .clearfix:after, .clearfix:before {
     display: table;
     content: "";
@@ -85,6 +80,7 @@ img {
     vertical-align: middle;
 }
 
+/* Headings */
 h1, h2, h3, h4, h5, h6 {
     font-family: "Avenir Next LT Pro Demi", sans-serif;
     color: #14a7e0;
@@ -93,6 +89,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.2rem 0 1.5rem;
 }
 
+/* Buttons
+   Using a <span> within the button will cause the font size to increase
+ */
 .blue_btn {
     color: #0074c8;
     font-size: 16px;
@@ -177,6 +176,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #f08a41;
 }
 
+/* Headers */
 h1 {
     font-size: 50px;
 }
@@ -189,6 +189,7 @@ h3 {
     font-size: 30px;
 }
 
+/* Forms */
 input[type="text"], select, textarea {
     display: block;
     width: 100%;
@@ -252,7 +253,7 @@ textarea {
 
 .selected {
     float: left;
-    margin: 0px;
+    margin: 0;
     width: 27%;
 }
 
@@ -268,6 +269,7 @@ textarea {
     width: 100%;
 }
 
+/* Add Flexbox to Some Rows */
 .row.display-flex {
  display: flex;
     flex-wrap: wrap;
@@ -278,6 +280,7 @@ textarea {
     flex-direction: column;
 }
 
+/* Church Online Button */
 .lqd-header-church-online-btn {
     border-color: #337ab7; /* Match Locations Border */
     margin-top: 6px; /* Match height of Locations */
@@ -294,6 +297,7 @@ textarea {
     margin-right:-35px;
 }
 
+/* Top Menu */
 .menublock {
     margin: 0;
     background-color: #14a7e0
@@ -332,7 +336,7 @@ textarea {
 }
 
 .menublock nav {
-    margin: 0px;
+    margin: 0;
 }
 
 .menublock ul li:first-child {
@@ -370,6 +374,7 @@ textarea {
     cursor: pointer;
 }
 
+/* Footer Menu */
 .footer_section {
     background: #14a7e0;
     padding: 18px 0;
@@ -465,6 +470,7 @@ textarea {
     text-transform: uppercase;
 }
 
+/* General Menus */
 .menu_list {
     margin: 0;
 }
@@ -490,6 +496,7 @@ textarea {
     text-decoration: none;
 }
 
+/* Entry Content */
 .entry-content {
     padding: 15px;
     font-size: 24px;
@@ -507,7 +514,7 @@ textarea {
 }
 
 .entry-content .body-text p {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
@@ -567,6 +574,7 @@ textarea {
     margin-top: 15px;
 }
 
+/* Footer */
 .footer_menu_widget_else a {
     color: #14a7e0;
     text-decoration: none;
@@ -598,6 +606,7 @@ textarea {
     min-width: 205px;
 }
 
+/* >=1024px and <=1200px */
 @media only screen and (min-width: 1024px) and (max-width: 1200px) {
     .nav > li > a {
         padding-left: 28px;
@@ -609,6 +618,7 @@ textarea {
     }
 }
 
+/* >=768px and <=1023px */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .selected {
         margin: 8px 0 0 50px;
@@ -621,19 +631,21 @@ textarea {
     }
 }
 
+/* >=768px <=814px */
 @media only screen and (min-width: 768px) and (max-width: 814px) {
     .menublock li a {
         font-size: 1.34rem;
     }
 }
 
+/* >=768px and <=991px */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-
     .sectionleftul .menu_list li {
         width: auto;
     }
 }
 
+/* >=992px and <=1023px */
 @media only screen and (min-width: 992px) and (max-width: 1023px) {
     .sectionleftul .menu_list li {
         min-width: 151px;
@@ -644,8 +656,8 @@ textarea {
     }
 }
 
+/* <=1024px */
 @media (max-width: 1024px) {
-
     .logo {
         margin-left: auto;
     }
@@ -663,7 +675,7 @@ textarea {
     }
 
     .futr_menublock {
-        margin: 0px;
+        margin: 0;
     }
 
     .lqd-header-logo {
@@ -686,6 +698,7 @@ textarea {
     }
 }
 
+/* >=768px */
 @media (min-width: 768px) {
     .navbar-collapse {
         padding-left: 0;
@@ -708,6 +721,7 @@ textarea {
 
 }
 
+/* <=767px */
 @media (max-width: 767px) {
     .sectionleftul .menu_list ul li {
         padding-bottom: 24px;
@@ -724,11 +738,11 @@ textarea {
     .logo {
         text-align: center;
         float: none;
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .selected {
-        margin: 0px;
+        margin: 0;
         width: 92%;
         text-align: center;
         float: none;
@@ -777,7 +791,7 @@ textarea {
 
     .footer_container {
         background-color: #dcddde;
-        padding: 0px 27px 0 18px;
+        padding: 0 27px 0 18px;
     }
 
     .sectionleftul {
@@ -789,7 +803,7 @@ textarea {
 
     .sectionleftul li {
         float: none;
-        padding-right: 0px;
+        padding-right: 0;
     }
 
     .footer_social {
@@ -815,8 +829,8 @@ textarea {
     }
 
     .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
-        padding-left: 0px;
-        padding-right: 0PX;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     h1 {
@@ -832,19 +846,19 @@ textarea {
     }
 
     .entry-content p {
-        padding-left: 0px;
-        padding-right: 0PX;
+        padding-left: 0;
+        padding-right: 0;
         font-size: 18px;
 
     }
 
     .page-content .search-form {
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .entry-content table {
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .search-form .screen-reader-text {
@@ -889,6 +903,7 @@ textarea {
     }
 }
 
+/* <=479px */
 @media (max-width: 479px) {
 
     .sectionleft li a {
@@ -913,6 +928,7 @@ textarea {
     }
 }
 
+/* <=319px */
 @media (max-width: 319px) {
     h1 {
         font-size: 24px;
@@ -935,14 +951,14 @@ textarea {
     background-color: #14a7e0 !important;
 }
 
-.body-text /* For Text Body Content */
+/* For Text Body Content */
+.body-text
 {
     max-width: 800px !important;
     margin: auto !important;
 }
 
 /* Responsive Videos, when not using FitVid. */
-
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%;
@@ -1007,11 +1023,11 @@ textarea {
 }
 
 .campus-addresses h2 {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .campus-addresses p {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 /* Campus GPS Address */
@@ -1110,36 +1126,24 @@ textarea {
     font-size: 28px;
     font-weight: 700;
     margin-bottom: 10px;
-    font-family: "arial";
-    padding-left: 0px;
+    font-family: "arial", sans-serif;
+    padding-left: 0;
     text-transform:capitalize;
 }
 .group-guides-template-default h1  {
-    padding-left: 0px;
+    padding-left: 0;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 5px;
-    font-family: "arial";
+    font-family: "arial", sans-serif;
 }
 .group-guides p {
-    padding-left:0px;
+    padding-left:0;
     font-size: 18px;
 }
 .group-guides ul li {
-    font-size: 18px;}
+    font-size: 18px;
+}
 .group-guides ol li {
-    font-size: 18px;}
-
-/* Customize Church Online Header Button
- * Note: This is mainly so that it matches the Church Locations Dropdown
- */
-.lqd-header-church-online-btn {
-    border-color: #337ab7;
-    border-width: 2px;
-    color: #14a7e0;
-    white-space: nowrap;
-    margin-top: 6px;
-    line-height: .5rem;
-    font-size: 16px;
-    height: 28px;
+    font-size: 18px;
 }
