--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ textarea {
 
 .logo {
     float: left;
-    margin-left: -22px;
+    /*margin-left: -22px;*/
 }
 
 .selected {
@@ -288,7 +288,7 @@ textarea {
     font-family: 'Avenir Next LT Pro', sans-serif;
     font-weight:700;
     text-transform: uppercase;
-    margin-right:-35px;
+    /*margin-right:-35px;*/
 }
 
 /* Top Menu */
@@ -376,7 +376,7 @@ textarea {
 
 .sectionleftul {
     float: left;
-    margin-left: -22px;
+    /*margin-left: -22px; */
 }
 
 .sectionleftul li {
@@ -396,7 +396,7 @@ textarea {
 
 .footer_social {
     float: right;
-    margin: 0 -32px;
+   /* margin: 0 -32px; */
     padding: 0;
 }
 
@@ -441,11 +441,11 @@ textarea {
 
 .footer_container {
     background-color: #dcddde;
-    padding: 15px 0;
+    padding: 15px .5vw;
 }
 
 .futr_menublock {
-    margin: 0 -32px 0 -30px;
+   /* margin: 0 -32px 0 -30px; */
 }
 
 .inner_block {
@@ -585,15 +585,15 @@ textarea {
 }
 
 .sectionleftul {
-    margin-left: -41px;
+    /* margin-left: -41px; */
 }
 
 .footer_social li:last-child {
-    margin-right: 0;
+   /* margin-right: 0; */
 }
 
 .logo {
-    margin-left: -31px !important;
+    /*margin-left: -31px !important;*/
 }
 
 .sectionleftul .menu_list li {
@@ -660,16 +660,18 @@ textarea {
         margin: 0 auto;
     }
 
+    /*
     .footer_social > li:last-child {
         margin-right: 0 !important;
     }
+     */
 
     .sectionleftul {
         margin-left: auto;
     }
 
     .futr_menublock {
-        margin: 0;
+       /* margin: 0; */
     }
 
     .lqd-header-logo {
@@ -810,16 +812,16 @@ textarea {
 
     .footer_social li {
         display: inline;
-        margin-right: 10px;
+      /*  margin-right: 10px; */
         float: none;
     }
 
     .footer_container .futr_menublock .col-xs-6 {
-        width: 100%;
+       /* width: 100%;*/
     }
 
     .footer_container .futr_menublock {
-        text-align: center;
+      /*  text-align: center; */
     }
 
     .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
@@ -938,6 +940,14 @@ textarea {
 
     .entry-content p {
         font-size: 14px;
+    }
+}
+
+/* >=1200px */
+@media (min-width: 1200px) {
+    .container {
+        max-width:1280px;
+        width:1280px;
     }
 }
 
