--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -244,3 +244,50 @@
 .group-guides ol li {
     font-size: 18px;
 }
+
+/* COVID */
+.lqd-header-covid {
+    background-color: lightgrey;
+    padding-top: 2vw;
+    padding-bottom: 1.5vw;
+    margin-bottom: 1vw;
+}
+
+.lqd-header-covid-text {
+    font-size: 2rem;
+    line-height: 2rem;
+}
+
+.lqd-header-covid-button {
+    border: 2px solid black;
+    background-color: lightgrey !important;
+    margin-top: auto;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    white-space: nowrap;
+    color: black;
+    border-radius: 42px;
+    font-family: "Avenir Next LT Pro", sans-serif;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+@media (min-width: 1200px) {
+    .lqd-header-covid-button {
+        line-height: 1rem;
+        text-align: center;
+        margin-left: -15px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .lqd-header-covid {
+        padding-bottom: 1rem;
+        margin-bottom: 2rem;
+    }
+
+    .lqd-header-covid .col-xs-12:last-child {
+        margin-top:1rem;
+        text-align:center;
+    }
+}
