--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: LIQUIDCHURCH
-Theme URI: http://www.liquidchurch.com/
+Theme URI: https://liquidchurch.com/
 Author: Liquid Church, EmizenTech Team
-Author URI: http://emizentech.com/
+Author URI: http://liquidchurch.com/
 Description: A custom WP theme.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: one-column, two-columns, right-sidebar,custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
+Tags: one-column, two-columns, right-sidebar,custom-header, custom-menu, editor-style, featured-images, post-formats, rtl-language-support, sticky-post, translation-ready
 Text Domain: liquidchurch
 */
 .chk-box{
