--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -253,16 +253,21 @@
     margin-bottom: 1vw;
 }
 
+.lqd-header-covid .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .lqd-header-covid-text {
-    font-size: 2rem;
+    font-size: 1.6rem;
     line-height: 2rem;
 }
 
-.lqd-header-covid-button {
+.lqd-header-covid-btn {
     border: 2px solid black;
     background-color: lightgrey !important;
     margin-top: auto;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     line-height: 2rem;
     white-space: nowrap;
     color: black;
@@ -273,7 +278,7 @@
 }
 
 @media (min-width: 1200px) {
-    .lqd-header-covid-button {
+    .lqd-header-covid-btn {
         line-height: 1rem;
         text-align: center;
         margin-left: -15px;
