- Add new @media for up to 1000px with margin-top:1rem for covid btn so that button doesn't bunch up against text above it - Remove margin-top:1rem from media query >1200px to prevent button from being lower than text when on same row. - Revert change from api to wp.customize to avoid difficulties, may re-add later. - Revert esc_html__ due to conflicting best practices from Underscores vs Twenty Nineteen. - Add minimized skip-link-focus-fix.min.js

--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -292,7 +292,13 @@
     }
 
     .lqd-header-covid .col-xs-12:last-child {
-        margin-top:1rem;
         text-align:center;
+    }
+}
+
+@media (max-width: 1000px) {
+    .lqd-header-covid .col-xs-12:last-child {
+        /* Once the button moves below the text it bumps up against the text, so add some space */
+        margin-top:1rem;
     }
 }
