- Use filemtime to set font CSS version. - Use filemtime for style.css to set CSS version for font-awesome. - Update messaging for COVID.

--- a/css/lqd-fonts.css
+++ b/css/lqd-fonts.css
@@ -1,4 +1,4 @@
-/* FONTS */
+/* Liquid Avenir Fonts */
 @font-face {
     font-family: 'Avenir Next LT Pro';
     src: url('../fonts/Avenir/AvenirNextLTPro-Regular.eot');
