- Merging in significant changes done locally around messages. - Rename numerous CSS rules, generally lqdm-, standardizing naming conventions. - Remove numerous unnecessary CSS rules. - Change some IDs to classes and update CSS rules accordingly. - Add give/share/subscribe buttons. - Extract message-details.php, message-edit-footer.php, message-video-imagephp, messages-other-in-series.php from content-single-gc-sermons.php - Remove unused template files content-search-messages.php, content-sermon.php, template-search-messages.php, template-series.php - Add social-action-bar.php and social-share-modal.php which integrate social sharing / giving / subscribing functionality in the theme.

--- a/css/style.css
+++ b/css/style.css
@@ -548,11 +548,11 @@ a.lqd-header-church-online-btn:hover {
     }
 
     .menu_list li a {
-        font-size: 1.2em
+        font-size: 1.2em;
     }
 
     .lqd-footer-inner-block h2 {
-        font-size: 1.2em
+        font-size: 1.2em;
     }
 
     .nav > li > a {
