--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: LIQUIDCHURCH
+Theme Name: Liquid Church Theme
 Theme URI: https://liquidchurch.com/
 Author: Liquid Church, EmizenTech Team
 Author URI: http://liquidchurch.com/
