- Fixing issues with paths in some vendor files. - Doc updates. - Minimizing files as appropriate. - Reordering lqd-messages.css classes to better represent visual/logical flow. - Renaming some lqdt to lqdm that are in plugin. - Removing unused sprite class from styles. - Adding screen reader classes. - Renaming .form-controlinput to .lqd-header-search-input - Moving vendor font files into sub-directories - Copying in fresh vendor files as needed due to Prettier changing formatting in some. - Removing outdated html5 shiv. - Refactoring social share. - Modularizing main messages page. - Update .gitignore, remove .jshintrc, will rely on ESLint. - Prettier now ignores min files. - Add basic stylelint config that works well with Prettier. - Remove unnecessary code implementing comments and pingbacks on blank.php - Removing unused liquid_template.php - Updating package.json and package-lock.json to include useful dev dependencies: autoprefixer, eslint, postcss, stylelint, yuicompressor - temporarily removed backstop. - Add screen reader text to site search

--- a/css/lqd-fonts.css
+++ b/css/lqd-fonts.css
@@ -1,4 +1,8 @@
-/* Liquid Avenir Fonts */
+/**
+ * Liquid Theme Fonts
+ *
+ * This theme uses the Avenir font.
+ */
 @font-face {
   font-family: "Avenir Next LT Pro";
   src: url("../fonts/Avenir/AvenirNextLTPro-Regular.eot");
